Fix draggable item overflow causing scrollbar to appear

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
 
 body {
   user-select: none;
+  overflow: hidden;
 }
 
 #container:has(#calendar) {
